-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.3, 6.9.0
-
Windows 10 22H2, MSVC 2022 x64
-
568cea906 (dev), fd0557ee8 (6.10), 7d60eaa30 (6.9), b155b34bc (tqtc/lts-6.8), e49a18a7c (dev), febb35abd (6.10), 678d2ab40 (6.9)
Probably because QQmlLocaleValueType is not exported: https://github.com/qt/qtdeclarative/blob/v6.9.0/src/qml/qml/qqmllocale_p.h#L93
Code
import QtQuick Window { width: 640 height: 480 visible: true title: Qt.locale("en_AU").nativeLanguageName }
Outcomes
With set_target_properties(appLocaleDirectIssue PROPERTIES QT_QMLCACHEGEN_DIRECT_CALLS ON), we get
appLocaleDirectIssue_Main_qml.cpp.obj:-1: error: LNK2001: unresolved external symbol "public: static struct QMetaObject const QQmlLocaleValueType::staticMetaObject" (?staticMetaObject@QQmlLocaleValueType@@2UQMetaObject@@B)
| For Gerrit Dashboard: QTBUG-135795 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 664687,1 | Direct mode: Test that Qt.locale can be compiled | 6.8 | qt/tqtc-qmlcompilerplus | Status: NEW | -1 | 0 |
| 649162,4 | Export QQmlLocaleValueType's meta-object | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 649530,3 | Direct mode: Test that Qt.locale can be compiled | dev | qt/tqtc-qmlcompilerplus | Status: MERGED | +2 | 0 |
| 649803,2 | Export QQmlLocaleValueType's meta-object | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 650994,2 | Export QQmlLocaleValueType's meta-object | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 651151,2 | Export QQmlLocaleValueType's meta-object | tqtc/lts-6.8 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |
| 664493,2 | Direct mode: Test that Qt.locale can be compiled | 6.10 | qt/tqtc-qmlcompilerplus | Status: MERGED | +2 | 0 |
| 664602,2 | Direct mode: Test that Qt.locale can be compiled | 6.9 | qt/tqtc-qmlcompilerplus | Status: MERGED | +2 | 0 |