Export QQmlLocaleValueType's meta-object

We need to expose the meta-object, so that qmlsc can make use of it in
direct mode. We do not need to export the class wholesale, as all
methods are actually inline.

Fixes: QTBUG-135795
Change-Id: Ia48152b2250012e48f17eed23f0150c4c89c3fc7
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 568cea9063e14acd804ee454177e5a0898f8ffda)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit fd0557ee8d9e7c08f4c7d0a29c6a185745b2217f)
(cherry picked from commit 7d60eaa30018d838b99949ab0a017bb0d8049519)